--- a/contacto.html
+++ b/contacto.html
@@ -62,14 +62,14 @@
                     <h5 class="card-title">Datos de Contacto</h5>
                     <p class="card-text">Ariel</p>
                     <p class="card-text">Teléfono: <a href="tel:+5491126632312">+54 9 11 2663 2312</a></p>
-                    <p class="card-text">Email: <a href="mailto:ariel@mercadobike.com">ariel@mercadobike.com</a></p>
+                    <p class="card-text">Email: <a href="mailto:ariel@mercadobike.com">ariel@bikeplanet.com</a></p>
                 </div>
             </div>
         </section>
     </main>
 
     <footer class="footer">
-        <p>&copy; 2024 MercadoBike. Todos los derechos reservados.</p>
+        <p>&copy; 2024 BikePlanet. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
