--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <main>
         <div class="row row-cols-1 row-cols-md-3 g-3">
-            <!-- Repetir cada estructura de card para obtener un total de 12 elementos -->
+         
             <div class="col">
                 <div class="card h-100">
                     <img src="trek-speed-concept-slr-6-etap-414445-1-15-5.jpg" class="card-img-top" alt="Producto 1">
@@ -108,41 +108,15 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="Producto 10">
-                    <div class="card-body">
-                        <h5 class="card-title">Producto 10</h5>
-                        <p class="card-text">Descripción del producto 10.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="Producto 11">
-                    <div class="card-body">
-                        <h5 class="card-title">Producto 11</h5>
-                        <p class="card-text">Descripción del producto 11.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="Producto 12">
-                    <div class="card-body">
-                        <h5 class="card-title">Producto 12</h5>
-                        <p class="card-text">Descripción del producto 12.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
+   
+
         
 
 
     </main>
 
     <footer class="footer">
-        <p>&copy; 2024 MercadoBike. Todos los derechos reservados.</p>
+        <p>&copy; 2024 BikePlanet. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
