--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
          
             <div class="col">
                 <div class="card h-100">
-                    <img src="trek-speed-concept-slr-6-etap-414445-1-15-5.jpg" class="card-img-top" alt="Producto 1">
+                    <img src="img/trek-speed-concept-slr-6-etap-414445-1-15-5.jpg" class="card-img-top" alt="Producto 1">
                     <div class="card-body">
                         <h5 class="card-title">Trek Speed Concept</h5>
                         <p class="card-text">$8000</p>
@@ -38,7 +38,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="bmc-teammachine-slr-three-403657-1.png" class="card-img-top" alt="Producto 2">
+                    <img src="img/bmc-teammachine-slr-three-403657-1.png" class="card-img-top" alt="Producto 2">
                     <div class="card-body">
                         <h5 class="card-title">BMC Timemachine</h5>
                         <p class="card-text">$4900</p>
@@ -47,7 +47,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="cannondale-kids-trail-24-inch-320160-1-11-1.png" class="card-img-top" alt="Producto 3">
+                    <img src="img/cannondale-kids-trail-24-inch-320160-1-11-1.png" class="card-img-top" alt="Producto 3">
                     <div class="card-body">
                         <h5 class="card-title">Cannondale Kids</h5>
                         <p class="card-text">$440</p>
@@ -56,7 +56,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="cervelo-p-105-2024-878144-1.png" class="card-img-top" alt="Producto 4">
+                    <img src="img/cervelo-p-105-2024-878144-1.png" class="card-img-top" alt="Producto 4">
                     <div class="card-body">
                         <h5 class="card-title">Cervelo P</h5>
                         <p class="card-text">$2000</p>
@@ -65,7 +65,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="electra-loft-7d-step-over-406542-1.jpg" class="card-img-top" alt="Producto 5">
+                    <img src="img/electra-loft-7d-step-over-406542-1.jpg" class="card-img-top" alt="Producto 5">
                     <div class="card-body">
                         <h5 class="card-title">Electra</h5>
                         <p class="card-text">$700</p>
@@ -74,7 +74,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="felt-bicycles-b-performance-ultegra-384496-1.png" class="card-img-top" alt="Producto 6">
+                    <img src="img/felt-bicycles-b-performance-ultegra-384496-1.png" class="card-img-top" alt="Producto 6">
                     <div class="card-body">
                         <h5 class="card-title">Felt B</h5>
                         <p class="card-text">$2500</p>
@@ -83,7 +83,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="kaius01three.jpg" class="card-img-top" alt="Producto 7">
+                    <img src="img/kaius01three.jpg" class="card-img-top" alt="Producto 7">
                     <div class="card-body">
                         <h5 class="card-title">Kaius</h5>
                         <p class="card-text">$899</p>
@@ -92,7 +92,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="P3-ULTEGRA2012.jpg" class="card-img-top" alt="Producto 8">
+                    <img src="img/P3-ULTEGRA2012.jpg" class="card-img-top" alt="Producto 8">
                     <div class="card-body">
                         <h5 class="card-title">Cervelo P3</h5>
                         <p class="card-text">$4500</p>
@@ -101,7 +101,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="electra-townie-original-7d-step-thru-368802-1.jpg" class="card-img-top" alt="Producto 9">
+                    <img src="img/electra-townie-original-7d-step-thru-368802-1.jpg" class="card-img-top" alt="Producto 9">
                     <div class="card-body">
                         <h5 class="card-title">Electra Townie</h5>
                         <p class="card-text">$950</p>
