--- a/carrito.html
+++ b/carrito.html
@@ -32,11 +32,11 @@
            
                 <div class="col-md-4 mb-4">
                     <div class="card">
-                        <img src="https://via.placeholder.com/150" class="card-img-top" alt="Producto 1">
+                        <img src="img/trek-speed-concept-slr-6-etap-414445-1-15-5.jpg" class="card-img-top" alt="Producto 1">
                         <div class="card-body">
-                            <h5 class="card-title">Producto 1</h5>
-                            <p class="card-text">Descripción del producto 1.</p>
-                            <p class="card-text"><strong>Precio: $100</strong></p>
+                            <h5 class="card-title">Trek Speed Concept Etap</h5>
+                            <p class="card-text">Speed Concept SLR 6 eTap es una bicicleta aerodinámica de triatlón de carbono diseñada para una velocidad increíble y una integración perfecta..</p>
+                            <p class="card-text"><strong>$8000</strong></p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <input type="number" min="1" value="1" class="form-control w-25">
                                 <button class="btn btn-danger">Eliminar</button>
@@ -49,8 +49,8 @@
                         <img src="https://via.placeholder.com/150" class="card-img-top" alt="Producto 2">
                         <div class="card-body">
                             <h5 class="card-title">Producto 2</h5>
-                            <p class="card-text">Descripción del producto 2.</p>
-                            <p class="card-text"><strong>Precio: $150</strong></p>
+                            <p class="card-text">2.</p>
+                            <p class="card-text"><strong>Precio: $0</strong></p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <input type="number" min="1" value="1" class="form-control w-25">
                                 <button class="btn btn-danger">Eliminar</button>
