--- a/contacto.html
+++ b/contacto.html
@@ -31,7 +31,7 @@
                     <a class="nav-link" href="carrito.html"><i class="fa-sharp fa-solid fa-cart-shopping"></i> Carrito</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contacto.html"><i class="fa-solid fa-envelope"></i> Contacto</a>
+                    <a class="nav-link" href="index.html#home"><i class="fa-solid fa-house"></i> Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="reseñas.html"><i class="fa-solid fa-star"></i> Reseñas</a>
