--- a/carrito.html
+++ b/carrito.html
@@ -41,6 +41,11 @@
                 <li class="nav-item">
                     <a class="nav-link" href="reseñas.html"><i class="fa-solid fa-star"></i> Reseñas</a>
                 </li>
+                <a href="carrito.html" class="carrito-link">
+                    <i class="fa-sharp fa-solid fa-cart-shopping"></i> 
+                    Carrito 
+                    <span id="carrito-contador" class="badge bg-danger">0</span>
+                </a>
             </ul>
         </div>
     </nav>
@@ -57,7 +62,7 @@
                         <th>Precio</th>
                         <th>Cantidad</th>
                         <th>Subtotal</th>
-                    </tr>
+                        <th></th>                    </tr>
                 </thead>
           
             <tbody id="carrito-items">
