--- a/contacto.html
+++ b/contacto.html
@@ -27,15 +27,18 @@
                 <li class="nav-item">
                     <a class="nav-link" href="productos.html"><i class="fa-solid fa-bicycle"></i> Productos</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="carrito.html"><i class="fa-sharp fa-solid fa-cart-shopping"></i> Carrito</a>
-                </li>
+               
                 <li class="nav-item">
                     <a class="nav-link" href="index.html#home"><i class="fa-solid fa-house"></i> Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="reseñas.html"><i class="fa-solid fa-star"></i> Reseñas</a>
                 </li>
+                <a href="carrito.html" class="carrito-link">
+                    <i class="fa-sharp fa-solid fa-cart-shopping"></i> 
+                    Carrito 
+                    <span id="carrito-contador" class="badge bg-danger">0</span>
+                </a>
             </ul>
         </div>
     </nav>   
@@ -93,7 +96,7 @@
     <script src="/js/hamburguesa.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.min.js"></script>
-    
+    <script src="js/funciones_del_carrito.js"></script>
     <!-- Footer -->
     <footer class="footer">
         <p>&copy; 2024 BikePlanet. Todos los derechos reservados.</p>
