--- a/reseñas.html
+++ b/reseñas.html
@@ -31,12 +31,14 @@
                 <li class="nav-item">
                     <a class="nav-link" href="productos.html"><i class="fa-solid fa-bicycle"></i> Productos</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="carrito.html"><i class="fa-sharp fa-solid fa-cart-shopping"></i> Carrito</a>
-                </li>
+               
                 <li class="nav-item">
                     <a class="nav-link" href="contacto.html"><i class="fa-solid fa-envelope"></i> Contacto</a>
                 </li>
+                <a href="carrito.html">
+                    <i class="fa-sharp fa-solid fa-cart-shopping"></i> Carrito 
+                    <span id="carrito-contador">0</span>
+                </a>
             </ul>
         </div>
     </nav>
@@ -58,7 +60,7 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.min.js"></script>
-
+<script src="js/funciones_del_carrito.js"></script>
     <script src="/js/hamburguesa.js"></script>
     <script src="js/funciones_resenas.js"></script>
 </body>
